# hackpsufall25

./: LICENSE  README.md
lightschool/: Makefile  README.md  db.sqlite3  manage.py  pyproject.toml
lightschool/lightschool/: asgi.py  settings.py  urls.py  wsgi.py
lightschool/school/: urls.py  views.py
lightschool/school/data/: tutor_rules.json
lightschool/school/data/lessons/en/english/: grade1.json  grade2.json  grade3.json
lightschool/school/data/lessons/en/math/: grade1.json  grade2.json  grade3.json
lightschool/school/data/lessons/es/english/: grade1.json  grade2.json  grade3.json
lightschool/school/data/lessons/es/math/: grade1.json  grade2.json  grade3.json
lightschool/school/services/: lessons.py  progress.py  tutor.py
lightschool/school/static/: manifest.json
lightschool/school/static/css/: theme.css
lightschool/school/static/js/: lesson.js  tutor.js
lightschool/school/templates/: base.html  error.html  home.html  lesson.html  quiz.html  subject_grade.html
lightschool/school/tests/: test_api.py  test_pages.py
lightschool/staticfiles/: sw.js
lightschool/staticfiles/js/: app.js  lesson.js  quiz.js  tutor.js
